api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/prodnet: "true"
        io.kompose.service: api
    spec:
      containers:
        - args:
            - python3
            - api.py
          image: alanaguinaga/api:latest
          name: api
          ports:
            - containerPort: 8085
          resources: {}
      restartPolicy: Always
status: {}
