career-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: career
  name: career
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: career
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/prodnet: "true"
        io.kompose.service: career
    spec:
      containers:
        - args:
            - java
            - -jar
            - /career/app/careerws/jar/career-path-0.0.1-SNAPSHOT.jar
          image: alanaguinaga/career:latest
          name: career
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
