market-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: market
  name: market
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: market
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/prodnet: "true"
        io.kompose.service: market
    spec:
      containers:
        - args:
            - java
            - -Dserver.port=8082
            - -jar
            - /market/app/mktws/jar/mkt-sentiment-0.0.1-SNAPSHOT.jar
          image: alanaguinaga/market:latest
          name: market
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
