webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/prodnet: "true"
        io.kompose.service: webapp
    spec:
      containers:
        - args:
            - node
            - /app/app/app.js
          image: alanaguinaga/webapp:latest
          name: webapp
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
